--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/index"
+    "pages/map/map",
+    "pages/activity/activity",
+    "pages/product/product"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -9,6 +11,31 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "云开发 QuickStart",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "color": "#c3c3c3",
+    "selectedColor": "#1b1b1b",
+    "borderStyle": "white",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "Tesla",
+        "iconPath": "images/nav/model-s.png",
+        "selectedIconPath": "/images/nav/model-s-selected.png"
+      },
+      {
+        "pagePath": "pages/map/map",
+        "text": "地图",
+        "iconPath": "images/nav/map.png",
+        "selectedIconPath": "/images/nav/map_select.png"
+      },
+      {
+        "pagePath": "pages/activity/activity",
+        "text": "活动",
+        "iconPath": "images/nav/activity.png",
+        "selectedIconPath": "/images/nav/activity_select.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
